--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
     "jquery": "^3.3.1",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-css": "^1.11.5",
+    "jquery-ui-themes": "^1.12.0",
     "path": "^0.12.7",
     "popper.js": "^1.14.5"
   }
