--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fs": "0.0.1-security",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
+    "intro.js": "^2.9.3",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "jquery-ui-css": "^1.11.5",
